<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/csusb_background"
    android:paddingBottom="90dp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/services"
            android:gravity="center"
            android:textSize="35sp"
            android:background="#000000"
            android:textColor="#FFFFFF"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#EEEEEE"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/services_paragraph_header"
                    android:id="@+id/textView"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#EEEEEE"
                android:padding="8dp"
                android:layout_marginTop="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/services_paragraph_1"
                    android:id="@+id/textView3"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:layout_marginTop="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/services_paragraph_2"
                    android:id="@+id/textView4"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:layout_marginTop="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/services_paragraph_3"
                    android:id="@+id/textView5"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:layout_marginTop="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/services_paragraph_4"
                    android:id="@+id/textView6"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    android:layout_marginTop="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/services_paragraph_5"
                    android:id="@+id/textView7"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:layout_marginTop="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/services_paragraph_6"
                    android:id="@+id/textView8"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:layout_marginTop="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/services_paragraph_7"
                    android:id="@+id/textView9"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:layout_marginTop="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/services_paragraph_8"
                    android:id="@+id/textView10"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:layout_marginTop="20dp"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>